Fix Discord logo not showing in Invite button

--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -37,7 +37,7 @@
     --editor-clock-lite-logo: url("../../img/logos/Editor_Clock_Lite_Logo_Black.svg");
     --empty-logo: url("../../img/logos/EmptyLogo_Black.svg");
     --cpp-logo: url("../../img/logos/ISO_C++_Logo.svg");
-    --discord-logo: url("../../img/logos/Discord-logo-White.svg");
+    --discord-logo: url("../../img/logos/Discord-Logo-White.svg");
 
 }
 
